--- a/test-parent/pom.xml
+++ b/test-parent/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0  http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>test-parent</artifactId>
 	<packaging>pom</packaging>
-	<build />
+	<build/>
 	<properties>
 		<junit.version>4.11</junit.version>
 		<mysqlDriver.version>5.1.30</mysqlDriver.version>
@@ -83,5 +81,6 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<module>../test-logging</module>
 		<module>../test-mybatis</module>
 		<module>../test-mybatis-spring</module>
-	</modules>
+    <module>test-activemq</module>
+  </modules>
 </project>
