--- a/test-parent/test-logging/.gitignore
+++ b/test-parent/test-logging/.gitignore
@@ -4908,3 +4908,154 @@
 /target
 /target
 /target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
