--- a/test-parent/pom.xml
+++ b/test-parent/pom.xml
@@ -9,6 +9,8 @@
 		<mysqlDriver.version>5.1.30</mysqlDriver.version>
 		<mina.version>2.0.7</mina.version>
 		<slf4j.version>1.7.7</slf4j.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.framework.version>4.1.5.RELEASE</spring.framework.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -87,5 +89,6 @@
     <module>test-logback</module>
     <module>test-commons-io</module>
     <module>test-spring-mvc</module>
-  </modules>
+    <module>test-mongodb</module>
+	</modules>
 </project>
