--- a/test-parent/test-mongodb/pom.xml
+++ b/test-parent/test-mongodb/pom.xml
@@ -29,5 +29,10 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.12.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>1.6.0.RELEASE</version>
+		</dependency>
 	</dependencies>
 </project>
