--- a/test-parent/test-mongodb/pom.xml
+++ b/test-parent/test-mongodb/pom.xml
@@ -7,7 +7,6 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>test-mongodb</artifactId>
-	<build />
 
 	<dependencies>
 		<dependency>
@@ -35,4 +34,25 @@
 			<version>1.6.0.RELEASE</version>
 		</dependency>
 	</dependencies>
+	<packaging>war</packaging>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<version>3.0</version>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
