--- a/test-parent/pom.xml
+++ b/test-parent/pom.xml
@@ -3,7 +3,19 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>test-parent</artifactId>
 	<packaging>pom</packaging>
-	<build/>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<properties>
 		<junit.version>4.11</junit.version>
 		<mysqlDriver.version>5.1.30</mysqlDriver.version>
